pexeso/pexeso.css
@import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap');

:root {
    --scrollbar-color: white;
}

* {
    margin: 0;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-drag: none;
    -webkit-user-select: none;
}

body {
    background-color: #FDFBFD;
    overflow-x: hidden;
}
body::-webkit-scrollbar {
    width: 5px;
}
body::-webkit-scrollbar-track {
    background-color: transparent;
    border-radius: 10px;
}
body::-webkit-scrollbar-thumb {
    background-color: var(--scrollbar-color);
    border-radius: 10px;
}

/* Game */
#game {
    height: 75vh;
    width: 75vw;
    position: absolute;
    left: 50%;
    top: 50%;
    translate: -50% -50%;
}

#game h1 {
    font-size: 3rem;
    font-family: "DynaPuff";
    color: #021F31;
    position: absolute;
    left: 50%;
    translate: -50%;
}
#game h2 {
    font-size: 1.5rem;
    font-family: "DynaPuff";
    color: #021F31;
    position: absolute;
    left: 50%;
    translate: -50%;
}

#pexeso-select-header {
    top: 3.8em;
}
#pexeso-lection-select, #pexeso-type-select {
    border: #021F31 5px solid;
    border-radius: 0.3em;
    font-size: 1.5rem;
    position: absolute;
    left: 50%;
    translate: -50%;
    font-family: "DynaPuff";
    cursor: pointer;
    background-color: #021F31;
    color: white;
    outline: none;
}
#pexeso-lection-select::-webkit-scrollbar, #pexeso-type-select::-webkit-scrollbar {
    width: 5px;
}
#pexeso-lection-select::-webkit-scrollbar-track, #pexeso-type-select::-webkit-scrollbar-track {
    background-color: #021F31;
    border-radius: 10px;
}
#pexeso-lection-select::-webkit-scrollbar-thumb, #pexeso-type-select::-webkit-scrollbar-thumb {
    background-color: white;
    border-radius: 10px;
}
#pexeso-lection-select option, #pexeso-type-select option {
    font-size: 1.5rem;
    color: white;
}
#pexeso-lection-select {
    top: 5em;
}

#pexeso-type-header {
    top: 8em;
}
#pexeso-type-select {
    top: 9.2em;
}

#start-button, #menu-button {
    padding: 1em 2em;
    width: 20em;
    position: relative;
    left: 50%;
    translate: -50%;
    top: 35em;
    cursor: pointer;
    border-radius: 0.75em;
    border: none;
    background-color: rgb(8, 196, 33);
    font-size: 1rem;
    z-index: 1;
    transition: filter 0.3s, scale 0.3s;
}
#start-button::before, #menu-button::before {
    content: "Spustit";
    width: 20em;
    height: 2em;
    background-color: rgb(6, 223, 35);
    display: inline-block;
    position: absolute;
    left: 0;
    top: -1.25em;
    z-index: 0;
    font-family: "DynaPuff";
    color: white;
    border-radius: 0.75em;
    text-align: center;
    padding-top: 1em;
}
#start-button:hover, #menu-button:hover {
    filter: brightness(1.1);
    scale: 1.02;
}

#cards {
    width: 95%;
    position: absolute;
    left: 2.5%;
    height: 80%;
    top: 15%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-content: start;
}
.card {
    width: 8em;
    height: 8em;
    margin: 0.25em;
    background-color: #021F31;
    border-radius: 0.3em;
    position: relative;
    cursor: pointer;
}
.card p {
    color: white;
    font-family: "DynaPuff";
    position: absolute;
    width: 100%;
    height: 100%;
    display: flex;
    text-align: center;
    justify-content: center;
    align-items: center;
    visibility: hidden;
    font-size: 0.8rem;
}
.card img {
    position: absolute;
    left: 50%;
    top: 50%;
    translate: -50% -50%;
    width: 50%;
    height: 50%;
}

@keyframes rotate {
    0% {
        transform: rotateY(0);
    }
    100% {
        transform: rotateY(180deg);
    }
}

#game-time {
    position: absolute;
    left: 2.5%;
    bottom: 0.1em;
    font-family: "DynaPuff";
    font-size: 1.75rem;
}
#player-score {
    position: absolute;
    right: 2.5%;
    bottom: 0.1em;
    font-family: "DynaPuff";
    font-size: 1.75rem;
}
#current-player {
    position: absolute;
    left: 50%;
    translate: -50%;
    bottom: 0.1em;
    font-family: "DynaPuff";
    font-size: 1.75rem;
    z-index: 10;
    border: none;
    z-index: 5;
}
#game-content h1 {
    top: 0em;
}
#background-helper {
    background-color: #FDFBFD;
    width: 75vw;
    height: 23.5%;
    position: fixed;
    left: 50%;
    translate: -50%;
    top: 0;
    z-index: 0;
}
#background-helper h1 {
    font-size: 3rem;
    font-family: "DynaPuff";
    color: #021F31;
    position: absolute;
    left: 50%;
    translate: -50%;
    top: 2.4em;
}

@keyframes player-change {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

#results-header {
    top: 7em;
}
#final-game-time {
    position: absolute;
    left: 50%;
    translate: -50%;
    top: 8em;
    font-family: "DynaPuff";
    font-size: 1.75rem;
}
#final-game-score {
    position: absolute;
    left: 50%;
    translate: -50%;
    top: 9em;
    font-family: "DynaPuff";
    font-size: 1.75rem;
}
#menu-button {
    top: 33em;
}
#menu-button::before {
    content: "Menu";
}

@media (width < 800px) {
    #game {
        width: 95%;
    }
    #current-player {
        top: 2.5em;
        height: 1em;
        width: 10em;
        display: flex;
        justify-content: center;
        align-items: center;
    }
    #game-time {
        left: -5%;
    }
    #player-score {
        right: -5%;
    }
    #cards {
        overflow-y: auto;
        width: 95%;
    }
    .card {
        width: 5em;
        height: 5em;
    }
    #background-helper-header {
        visibility: hidden;
    }
    #current-player, #game-time, #player-score {
        font-size: 1rem;
    }
}

